--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "irfrontfinalfront",
+  "name": "irfinalfront",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
+    "font-awesome": "^4.7.0",
+    "free-google-image-search": "^1.0.0",
+    "images-scraper": "^6.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "stemmer": "^2.0.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
